extra-js and gmap rehack

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -28,7 +28,7 @@
 <link rel='stylesheet' href='/css/masterslider.main.css' type='text/css'>
 <link rel='stylesheet' href='/css/masterslider-custom.css' type='text/css'>
 <link rel='stylesheet' href='/css/site.css' type='text/css'>
-<script src='//www.google.com/jsapi'></script>
+<!--script src='//www.google.com/jsapi'></script-->
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
@@ -129,6 +129,6 @@
 <script src='/js/jquery.fancybox-thumbs.js'></script>
 <script src='/js/gdlr-script.js'></script>
 <script src='/js/site.js'></script>
-<div class='extra-js'><script class='file' src='/js/'></script></div>
+<div class='extra-js'><script class='src' src=''></script></div>
 </body>
 </html>
