add title token

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="initial-scale=1.0" />  
     
   <!--link rel="pingback" href="/xmlrpc.php" /-->
-  <title>Perl Dancer Conference 2015 | Vienna Austria October 2015</title>
+  <title class="title">Perl Dancer Conference 2015 | </title>
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
 <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
@@ -28,7 +28,6 @@
 <link rel='stylesheet' href='/css/masterslider.main.css' type='text/css'>
 <link rel='stylesheet' href='/css/masterslider-custom.css' type='text/css'>
 <link rel='stylesheet' href='/css/site.css' type='text/css'>
-<!--script src='//www.google.com/jsapi'></script-->
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
