--- a/PerlDance/views/layouts/main.xml
+++ b/PerlDance/views/layouts/main.xml
@@ -1,5 +1,6 @@
 <specification>
   <value name="body_class" class="_body_" op="append" joiner=" " target="class"/>
+  <value name="title" op="append"/>
   <!--list name="menu-mobile" iterator="nav-menu-main">
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
