--- a/PerlDance/views/layouts/main.xml
+++ b/PerlDance/views/layouts/main.xml
@@ -1,16 +1,40 @@
 <specification>
-  <value name="body_class" class="_body_" op="append" joiner=" " target="class"/>
+  <container name="login" value="!logged_in_user" class="auth-login"/>
+  <container name="logout" value="logged_in_user" class="auth-logout"/>
+
+  <value name="body_class" class="_body_" op="append" joiner=" "
+    target="class"/>
+
   <value name="title" op="append"/>
-  <!--list name="menu-mobile" iterator="nav-menu-main">
+  <value name="content" class="content" op="hook"/>
+
+  <list name="menu-mobile" iterator="mobile-menu-main">
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
-  </list-->
+  </list>
+  <list name="menu-mobile-login" iterator="mobile-top-login">
+    <param name="name" class="link"/>
+    <param name="uri" class="link" target="href" op="append"/>
+  </list>
+  <list name="menu-mobile-logout" iterator="mobile-top-logout">
+    <param name="name" class="link"/>
+    <param name="uri" class="link" target="href" op="append"/>
+  </list>
+
+  <list name="menu-login" iterator="nav-top-login">
+    <param name="name" class="link"/>
+    <param name="uri" class="link" target="href"/>
+  </list>
+  <list name="menu-logout" iterator="nav-top-logout">
+    <param name="name" class="link"/>
+    <param name="uri" class="link" target="href" op="append"/>
+  </list>
   <list name="menu-normal" iterator="nav-menu-main">
     <param name="name" class="link"/>
     <param name="uri" class="link" target="href" op="append"/>
     <param name="class" class="link" target="class"/>
   </list>
-  <value name="content" class="content" op="hook"/>
+
   <list name="extra-js" iterator="extra-js">
     <param name="src" target="src"/>
   </list>
