start on bootstrap rebuild

--- a/PerlDance/views/fragments/speakers.html
+++ b/PerlDance/views/fragments/speakers.html
@@ -1,43 +1,9 @@
-  <div class="speaker-item-holder gdlr-speaker-type-round">
-
-    <div class="clear"></div>
-
-    <div class="speaker-row">
-
-      <div class="three columns speaker-item">
-        <div class="gdlr-item gdlr-speaker-item">
-          <div class="gdlr-ux gdlr-speaker-item-ux">
-            <div class="gdlr-speaker-thumbnail">
-              <img class="photo" src="/img/people/" alt="" width="300" height="300">
-              <a class="speaker-link gdlr-speaker-thumbnail-overlay-link" href="/speakers/"><span class="gdlr-speaker-thumbnail-overlay" ></span></a>
-            </div>
-            <div class="gdlr-speaker-item-content">
-              <h3 class="gdlr-speaker-item-title gdlr-skin-title"><a class="speaker-link" href="speakers/" ><span class="name">SawyerX</span></a></h3>
-              <div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" ><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-solomon.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=andrew-solomon" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=andrew-solomon" >Andrew Solomon</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Geekuni, London, United Kingdom</div></div></div></div></div>
-
-      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/andrew-baerg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=laurence-francis" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=laurence-francis" >Andrew Baerg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >SOLE.com, Vancouver, Canada</div></div></div></div></div>
-
-      <div class="three columns speaker-item"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/stefan-hornburg.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=john-super-doe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=john-super-doe" >Stefan Hornburg</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Linuxia, Hannover, Germany</div></div></div></div></div>
-
-      <div class="clear"></div>
-    </div>
-    <div class="speaker-row">
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/peter-mottram.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=peter-mottram" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=peter-mottram" >Peter Mottram</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Sysnix Consultants, Qormi, Malta</div></div></div></div></div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/jure-kodzoman.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=jure-kodzoman" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=jure-kodzoman" >Jure Kodzoman</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Informa Studio Ltd., Split, Croatia</div></div></div></div></div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/grega-pompe.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=grega-pompe" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=grega-pompe" >Grega Pompe</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >Informa Studio Ltd., Ljubljana, Slovenia</div></div></div></div></div>
-
-<div class="three columns"><div class="gdlr-item gdlr-speaker-item"><div class="gdlr-ux gdlr-speaker-item-ux"><div class="gdlr-speaker-thumbnail"><img src="/img/people/sam-batschelet.jpg" alt="" width="300" height="300" /><a class="gdlr-speaker-thumbnail-overlay-link" href="http://perl.dance/?speaker=sam-batschelet" ><span class="gdlr-speaker-thumbnail-overlay" ></span></a></div><div class="gdlr-speaker-item-content"><h3 class="gdlr-speaker-item-title gdlr-skin-title"><a href="http://perl.dance/?speaker=sam-batschelet" >Sam Batschelet</a></h3><div class="gdlr-speaker-item-position gdlr-info-font gdlr-skin-info" >West Branch Angler, New York, USA</div></div></div></div></div>
-
-      <div class="clear"></div>
+<div class="row speaker-row">
+  <div class="col-sm-3 speaker">
+    <a class="speaker-link" href="speakers/"><img class="photo img-responsive img-rounded" src="/img/people/"></a>
+    <h3><a class="speaker-link name" href="speakers/"></a></h3>
+    <div class="center-block">
+      <span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span>
     </div>
   </div>
 </div>
