--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -1,20 +1,9 @@
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
-      <section id="content-section-1">
-        <div class="section-container container">
-          <div class="gdlr-image-frame-item gdlr-item">
-            <div class="gdlr-frame frame-type-none">
-              <div class="gdlr-image-link-shortcode">
-                <img src="/img/perl-dancer-homepage-logo.png" alt="" width="851" height="200">
-              </div>
-            </div>
-          </div>
-          <div class="clear"></div>
-          <div class="gdlr-session-counter-item gdlr-item">
-            <!-- countdown fragment -->
-          </div>
-          <div class="clear"></div>
+<div class="container">
+  <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
+</div>
+<div class="container">
+  <div class="center-block countdown-timer">Countdown timer goes here</div>
+</div>
           <div class="gdlr-subscribe-item gdlr-item">
             <h4 class="gdlr-subscribe-title">Subscribe for updates</h4>
             <div class="gdlr-newsletter-subscribe">
@@ -27,15 +16,20 @@
             </div>
           </div>
           <div class="clear"></div>
+
+<div class="container">
+  <h3 class="">Speakers</h3>
+    <div class="speaker-item-wrapper">
+      <!-- fragments/speakers.html -->
+    </div>
+  </h3>
+</div>
+
           <div class="gdlr-item-title-wrapper gdlr-item pos-left ">
             <div class="gdlr-item-title-head">
-              <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">Speakers</h3>
               <div class="clear"></div>
             </div>
             <div class="gdlr-item-title-divider"></div>
-          </div>
-          <div class="speaker-item-wrapper">
-            <!-- fragments/speakers.html -->
           </div>
           <div class="clear"></div>
           <div class="session-item-wrapper">
