--- a/PerlDance/views/speakers.html
+++ b/PerlDance/views/speakers.html
@@ -1,9 +1,8 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title">nav title</h1>
-    <span class="gdlr-page-caption">nav description</span>
-  </div>  
+<div class="jumbotron title-wrapper">
+  <div class="container">
+    <h1 class="page-title">nav title</h1>
+    <span class="page-caption">nav description</span>
+  </div>
 </div>  
 
 <div class="content-wrapper">
@@ -17,7 +16,7 @@
               <div class="gdlr-item gdlr-feature-media-item gdlr-left" >
                 <div class="feature-media-thumbnail gdlr-image"></div>
                 <div class="feature-media-content-wrapper">
-                  <div class="feature-media-content"><p>Our impressive list of global thinkers leaves no doubt. Perl Dancer 2015 is a must. Even if you are not a Perl Hacker, our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
+                  <div class="feature-media-content"><p>Our impressive list of speakers leaves no doubt: Perl Dancer 2015 is a must. Even if you are not a Perl Hacker our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
                   </div>
                 </div>
               </div>
