--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -1,7 +1,89 @@
-/* highlight current page in nav */
-.gdlr-main-menu>li>a.current-page {
-  color: #0749bc;
-  opacity: 1;
+body {
+  padding-top: 90px;
+  font-family: "Montserrat";
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway";
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+  line-height: 1.3;
+  margin-bottom: 18px;
+}
+/* nav */
+#navbar a {
+  font-family: "Raleway";
+  font-size: 11px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  margin: 0;
+  text-transform: uppercase;
+}
+.normal {
+  height: 75px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #ffffff;
+  border-width: 0px;
+}
+.normal .navbar-right {
+  padding-top: 12px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+.navbar-brand img {
+  max-height: 75px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+.navbar-brand {
+  padding: 10px !important;
+}
+.shrink .navbar-brand {
+  padding: 5px 0 5px 10px !important;
+}
+.shrink {
+  height: 50px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #f5f5f5;
+  border-width: 0px;
+}
+.shrink .navbar-right {
+  padding-top: 0px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+.shrink .navbar-brand img {
+  max-height: 40px;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  transition: 0.5s;
+}
+@media (max-width: 765px) {
+  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    margin-top: 24px;
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #e7e7e7;
+  }
+  .normal .navbar-right, .shrink .navbar-right {
+    padding-top: 0px;
+  }
+  .shrink .navbar-collapse {
+    margin-top: 0px;
+    border-top: 0px;
+  }
 }
 /* amerikahaus map */
 #wgmpmap {
@@ -9,40 +91,23 @@
   height:200px;
 }
 #wgmpmap img {max-width: none;}
-/* misc stuff */
-.recentcomments a{
-  display:inline !important;
-  padding:0 !important;
-  margin:0 !important;
+/* title wrapper */
+.title-wrapper {
+  background-image: url("/img/meliavienna-carrusel51.jpg");
+  color: #ffffff;
 }
-.gdlr-session-counter-item {
-  margin-bottom: 10px;
+.title-wrapper h1 {
+  font-size: 45px;
+  font-weight: 800;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
-.gdlr-subscribe-item {
-  margin-bottom: 10px;
+.page-caption {
+    font-size: 19px;
+    font-style: italic;
 }
-.color-wrapper-cfp {
-  background-color: #2d2d2d;
-  padding-top: 90px;
-}
-.color-wrapper-speakers {
-  background-color: #f5f5f5;
-  padding-bottom: 50px;
-}
-.speaker-item-wrapper {
-  margin-bottom: 35px;
-}
-.color-wrapper-tickets {
-  background-color: #ffffff;
-  padding-bottom: 20px;
-  padding-top: 40px;
-}
-.margin-bottom-30 {
-  margin-bottom: 30px;
-}
-.margin-bottom-75 {
-  margin-bottom: 75px;
-}
-.display-none {
-  display:none;
+/* speakers */
+.speaker-row {
+  padding: 20px 0;
+  text-align: center;
 }
