--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -1,111 +1,55 @@
 <!DOCTYPE html>
-<!--[if IE 7]><html class="ie ie7 ltie8 ltie9" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 ltie9" lang="en-US"><![endif]-->
-<!--[if !(IE 7) | !(IE 8)  ]><!-->
-<html lang="en-US">
-<!--<![endif]-->
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="initial-scale=1.0" />  
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title class="title">Perl Dancer Conference 2015 | </title>
     
-  <!--link rel="pingback" href="/xmlrpc.php" /-->
-  <title class="title">Perl Dancer Conference 2015 | </title>
-<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
-<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
-<!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
-<link rel='stylesheet' href='/css/contact-form-7.css' type='text/css'>
-<link rel='stylesheet' href='/css/thekeynote-v1-05.css' type='text/css'>
-<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&#038;subset=latin&#038' type='text/css'>
-<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038' type='text/css'>
-<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'>
-<link rel='stylesheet' href='/css/superfish.css' type='text/css'>
-<link rel='stylesheet' href='/css/dl-menu.css' type='text/css'>
-<link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
-<link rel='stylesheet' href='/css/jquery.fancybox.css' type='text/css'>
-<link rel='stylesheet' href='/css/thekeynote-responsive.css' type='text/css'>
-<link rel='stylesheet' href='/css/thekeynote-custom.css' type='text/css'>
-<link rel='stylesheet' href='/css/masterslider.main.css' type='text/css'>
-<link rel='stylesheet' href='/css/masterslider-custom.css' type='text/css'>
-<link rel='stylesheet' href='/css/site.css' type='text/css'>
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
-<!--link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://perl.dance/wp-includes/wlwmanifest.xml" /--> 
-<link rel='canonical' href='http://perl.dance/'>
-<link rel='shortlink' href='http://perl.dance/'>
-<!-- load the script for older ie version -->
-<!--[if lt IE 9]>
-<script src="/js/html5.js"></script>
-<script src="/js/excanvas.js"></script>
-<![endif]-->
-</head>
+    <!--link rel="pingback" href="/xmlrpc.php" /-->
+    <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Feed" href="/?feed=rss2" /-->
+    <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Comments Feed" href="/?feed=comments-rss2" /-->
+    <!--link rel="alternate" type="application/rss+xml" title="Perl Dancer Conference 2015 &raquo; Homepage &#8211; new Comments Feed" href="/?feed=rss2&#038;page_id=3522" /-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Raleway%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900&#038;subset=latin&#038' type='text/css'>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Montserrat%3Aregular%2C700&#038;subset=latin&#038' type='text/css'>
+    <!--link rel='stylesheet' href='//fonts.googleapis.com/css?family=Droid+Serif%3Aregular%2Citalic%2C700%2C700italic&#038;subset=latin&#038' type='text/css'-->
+    <link rel='stylesheet' href='/css/google-map.css' type='text/css'>
+    <link rel='stylesheet' href='/css/font-awesome.min.css' type='text/css'>
+    <link rel='stylesheet' href='/css/site.css' type='text/css'>
+    <!--link rel="EditURI" type="application/rsd+xml" title="RSD" href="/xmlrpc.php?rsd" /-->
+    <!--link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://perl.dance/wp-includes/wlwmanifest.xml" /--> 
+    <link rel='canonical' href='http://perl.dance/'>
+    <link rel='shortlink' href='http://perl.dance/'>
+    <!-- load the script for older ie version -->
+    <!--[if lt IE 9]>
+    <script src="/js/html5.js"></script>
+    <script src="/js/excanvas.js"></script>
+    <![endif]-->
+  </head>
+  <body>
 
-<body class="_body_ page-template-default _masterslider _msp_version_2.14.2">
-  <div class="body-wrapper float-menu" data-home="/">
-
-    <header class="gdlr-header-wrapper">
-      <!-- top navigation -->
-    
-      <!-- logo -->
-      <div class="gdlr-header-inner">
-        <div class="gdlr-header-container container">
-          <!-- logo -->
-
-          <div class="gdlr-logo">
-            <a href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
-            <div class="gdlr-responsive-navigation dl-menuwrapper" id="gdlr-responsive-navigation" ><button class="dl-trigger">Open Menu</button>
-              <ul id="menu-main" class="menu-main dl-menu gdlr-main-mobile-menu">
-                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Home</a></li>
-                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Speakers</a></li>
-                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Schedule</a></li>
-                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Tickets</a></li>
-                <li class="menu-mobile menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Call For Papers!</a></li>
-                <li class="menu-mobile-login menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Login</a></li>
-                <li class="menu-mobile-logout menu-item menu-item-type-post_type menu-item-object-page"><a class="link" href="/">Logout</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- navigation -->
-          <div class="gdlr-navigation-wrapper">
-            <nav class="gdlr-navigation" id="gdlr-main-navigation" role="navigation">
-              <ul id="menu-main-1" class="menu-main sf-menu gdlr-main-menu">
-                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Home</a></li>
-                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Speakers</a></li>
-                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Schedule</a></li>
-                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Tickets</a></li>
-                <li class="menu-normal menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Call For Papers!</a></li>
-              </ul>
-              <ul class="auth-login menu-main sf-menu gdlr-main-menu">
-                <li class="menu-login menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="fancybox-link link" href="#">Login</a></li>
-              </ul>
-              <ul class="auth-logout menu-main sf-menu gdlr-main-menu">
-                <li class="menu-logout menu-item menu-item-type-post_type menu-item-object-page menu-item-type-post_type menu-item-object-page gdlr-normal-menu"><a class="link" href="/">Logout</a></li>
-              </ul>
-            </nav>  
-            <span class="gdlr-menu-search-button-sep">|</span>
-            <i class="fa fa-search icon-search gdlr-menu-search-button" id="gdlr-menu-search-button" ></i>
-
-            <div class="gdlr-menu-search" id="gdlr-menu-search">
-              <form method="get" id="searchform" action="/">
-                <div class="search-text">
-                  <input type="text" value="Type Keywords" name="s" autocomplete="off" data-default="Type Keywords" />
-                </div>
-                <input type="submit" value="" />
-                <div class="clear"></div>
-              </form> 
-            </div>    
-
-            <div class="gdlr-navigation-gimmick" id="gdlr-navigation-gimmick"></div>
-            <div class="clear"></div>
-          </div>
-          <div class="clear"></div>
+    <nav class="navbar navbar-default navbar-fixed-top normal">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/"><img src="/img/perl-dancer-2015-logo.png"></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="menu-main"><a class="link" href="/">Home</a></li>
+            <li class="menu-main"><a class="link" href="/">About</a></li>
+            <li class="menu-main"><a class="link" href="/">Contact</a></li>
+            <li class="menu-logout"><a class="link" href="/">Logout</a></li>
+          </ul>
         </div>
       </div>
-      <div class="clear"></div>
-    </header>
-    <div id="gdlr-header-substitute" ></div>
+    </nav>
 
     <div class="content"></div>
     
@@ -115,85 +59,14 @@
           <div class="copyright-left">
             © Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved
           </div>
-          <div class="copyright-right"></div>
-          <div class="clear"></div>
         </div>
       </div>
     </footer>
 
-  </div> <!-- body-wrapper -->
-
-<div class="display-none">
-<div class="NOTgdlr-lightbox-form" id="lightbox-login" >
-  <div class="gdlr-paypal-form-wrapper">
-    <h3 class="gdlr-paypal-form-head">You are booking for : <span>Conference only</span></h3>
-    <form class="gdlr-paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" data-ajax="http://perl.dance/wp-admin/admin-ajax.php" >
-      <div class="gdlr-paypal-fields">
-        <div class="six columns">
-          <span class="gdlr-head">Name *</span>
-          <input class="gdlr-require" type="text" name="gdlr-name">
-        </div>
-        <div class="six columns gdlr-right">
-          <span class="gdlr-head">Last Name *</span>
-          <input class="gdlr-require" type="text" name="gdlr-last-name">
-        </div>
-        <div class="clear"></div>
-        <div class="six columns">
-          <span class="gdlr-head">Email *</span>
-          <input class="gdlr-require gdlr-email" type="text" name="gdlr-email">
-        </div>
-        <div class="six columns gdlr-right">
-          <span class="gdlr-head">Phone</span>
-          <input type="text" name="gdlr-phone">
-        </div>
-        <div class="clear"></div>
-        <div class="six columns"><span class="gdlr-head">Address</span>
-          <textarea name="gdlr-address"></textarea>
-        </div>
-        <div class="six columns gdlr-right"><span class="gdlr-head">Additional Note</span>
-          <textarea name="gdlr-additional-note"></textarea>
-        </div>
-        <div class="clear"></div>
-      </div>
-      <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="jure.kodzoman@informastudio.com">
-      <input type="hidden" name="item_name" value="Conference only">
-      <input type="hidden" name="ticket_id" value="3282">
-      <input type="hidden" name="invoice" value="">
-      <input type="hidden" name="amount" value="">
-      <input type="hidden" name="return" value="http://perl.dance/?ticket=one-day-pass">
-      <input type="hidden" name="no_shipping" value="0">
-      <input type="hidden" name="no_note" value="1">
-      <input type="hidden" name="currency_code" value="EUR">
-      <input type="hidden" name="lc" value="AU">
-      <input type="hidden" name="bn" value="PP-BuyNowBF">
-      <input type="hidden" class="gdlr-paypal-action" name="action" value="">
-      <input type="hidden" name="security" value="66bccbcf68">
-      <div class="gdlr-notice email-invalid" >Invalid Email Address </div>
-      <div class="gdlr-notice require-field" >Please fill all required fields</div>
-      <div class="gdlr-notice alert-message" ></div>
-      <div class="gdlr-paypal-loader" ></div>
-
-      <input type="button" class="gdlr-button-mail gdlr-button with-border" value="Login" >
-      <div class="clear"></div>
-    </form>
-  </div>
-</div>
-</div>
-
-<link rel='stylesheet' href='/css/google-map.css' type='text/css'>
-<script src='/js/jquery.form.min.js'></script>
-<script src='/js/contact-form-7.js'></script>
-<script src='/js/superfish.js'></script>
-<script src='/js/hoverIntent.min.js'></script>
-<script src='/js/modernizr.custom.js'></script>
-<script src='/js/jquery.dlmenu.js'></script>
-<script src='/js/jquery.easing.js'></script>
-<script src='/js/jquery.fancybox.pack.js'></script>
-<script src='/js/jquery.fancybox-media.js'></script>
-<script src='/js/jquery.fancybox-thumbs.js'></script>
-<script src='/js/gdlr-script.js'></script>
-<script src='/js/site.js'></script>
-<div class='extra-js'><script class='src' src=''></script></div>
-</body>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src='/js/site.js'></script>
+    <div class='extra-js'><script class='src' src=''></script></div>
+  </body>
 </html>
