--- a/PerlDance/views/speakers.xml
+++ b/PerlDance/views/speakers.xml
@@ -1,5 +1,5 @@
 <specification>
   <value name="speaker-item-wrapper" op="hook" include="fragments/speakers.html"/>
-  <value name="title" class="gdlr-page-title"/>
-  <value name="description" class="gdlr-page-caption"/>
+  <value name="title" class="page-title"/>
+  <value name="description" class="page-caption"/>
 </specification>
