--- a/PerlDance/views/speakers.html
+++ b/PerlDance/views/speakers.html
@@ -5,37 +5,9 @@
   </div>
 </div>  
 
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
-
-      <section id="content-section-1" >
-        <div class="color-wrapper-speakers gdlr-color-wrapper  gdlr-show-all no-skin">
-          <div class="container">
-            <div class="gdlr-feature-media-ux gdlr-ux">
-              <div class="gdlr-item gdlr-feature-media-item gdlr-left" >
-                <div class="feature-media-thumbnail gdlr-image"></div>
-                <div class="feature-media-content-wrapper">
-                  <div class="feature-media-content"><p>Our impressive list of speakers leaves no doubt: Perl Dancer 2015 is a must. Even if you are not a Perl Hacker our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="clear"></div>
-            <div class="clear"></div>
-          </div>
-        </div>
-        <div class="clear"></div>
-      </section>
-        
-      <section id="content-section-2" >
-        <div class="section-container container">
-          <div class="speaker-item-wrapper">
-            <!-- fragments/speakers.html -->
-          </div>
-        </div>
-      </section>
-    </div>
-  </div><!-- gdlr-content -->
-  <div class="clear" ></div>
-</div><!-- content wrapper -->
+<div class="container">
+  <p>Our impressive list of speakers leaves no doubt: Perl Dancer 2015 is a must. Even if you are not a Perl Hacker our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
+</div>
+<div class="container speaker-item-wrapper">
+  <!-- fragments/speakers.html -->
+</div>
