--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -90,6 +90,12 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 0px;
   }
 }
+/* footer */
+.footer {
+  color: #5b5b5b;
+  background-color: #212121;
+  padding: 20px 0;
+}
 /* amerikahaus map */
 #wgmpmap {
   width:100%;
