--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -53,15 +53,13 @@
 
     <div class="content"></div>
     
-    <footer class="footer-wrapper" >
-      <div class="copyright-wrapper">
-        <div class="copyright-container container">
-          <div class="copyright-left">
+    <div class="footer">
+      <div class="copyright-container container">
+        <div class="copyright-left">
             © Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved
-          </div>
         </div>
       </div>
-    </footer>
+    </div>
 
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
