improve nav ul changes

--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -20,7 +20,10 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   padding-bottom: 10px;
 }
-#navbar a.active, #navbar li:hover>a {
+#navbar ul:hover li>a {
+  border-bottom: 0px;
+}
+#navbar ul li:hover>a, #navbar a.active {
   color: #0749bc;
   border-bottom: 3px solid #0749bc;
 }
