fixup layout for location map on homepage

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -4,6 +4,7 @@
 <div class="container">
   <div class="center-block countdown-timer">Countdown timer goes here</div>
 </div>
+
           <div class="gdlr-subscribe-item gdlr-item">
             <h4 class="gdlr-subscribe-title">Subscribe for updates</h4>
             <div class="gdlr-newsletter-subscribe">
@@ -25,47 +26,20 @@
   </h3>
 </div>
 
-          <div class="gdlr-item-title-wrapper gdlr-item pos-left ">
-            <div class="gdlr-item-title-head">
-              <div class="clear"></div>
-            </div>
-            <div class="gdlr-item-title-divider"></div>
-          </div>
-          <div class="clear"></div>
-          <div class="session-item-wrapper">
-            <div class="clear"></div>
-          </div>
-          <div class="clear"></div>
-          <div class="gdlr-item-title-wrapper gdlr-item pos-left">
-            <div class="gdlr-item-title-head">
-              <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">Location</h3>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <div class="gdlr-item gdlr-content-item" >
-            <div class="gdlr-location-item" >
-              <div class="gdlr-location-title">Training Venue - Amerikahaus </div>
-              <div class="gdlr-location-place">
-                <i class="fa fa-location-arrow" ></i>2 Friedrich-Schmidt-Platz, 1010 Wien, Austria
-              </div>
-            </div>
-            <div id="wgmpmap"></div>
-          </div>
-          <div class="clear"></div>
-          <div class="gdlr-item-title-wrapper gdlr-item pos-left ">
-            <div class="gdlr-item-title-head">
-              <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">Register Now!</h3>
-              <div class="clear"></div>
-            </div>
-            <div class="gdlr-item-title-caption gdlr-skin-info">Hurry up! Early bird tickets are on sale only until July 15th</div>
-          </div>
-          <div class="ticket-item-wrapper"  >
-            <!-- tickets fragment -->
-          </div>
-          <div class="clear"></div>
-        </div>
-      </section>
+<div class="container">
+  <h3>Location</h3>
+  <div class="location">
+    <div class="location-title">Training Venue - Amerikahaus</div>
+    <div>
+      <i class="fa fa-location-arrow" ></i><span class="location-address">2 Friedrich-Schmidt-Platz, 1010 Wien, Austria</span>
     </div>
+    <div id="wgmpmap"></div>
   </div>
-  <div class="clear" ></div>
 </div>
+
+<div class="container">
+  <h3 class="center-block">Register Now!</h3>
+  <div class="center-block">Hurry up! Early bird tickets are on sale only until July 15th</div>
+</div>
+
+<div class="ticket-item-wrapper"  ><!-- tickets fragment --></div>
