fixup speakers fragment layout for extra-small devices

--- a/PerlDance/views/fragments/speakers.html
+++ b/PerlDance/views/fragments/speakers.html
@@ -1,5 +1,5 @@
 <div class="row speaker-row">
-  <div class="col-sm-3 speaker">
+  <div class="col-sm-3 col-xs-6 speaker">
     <a class="speaker-link" href="speakers/"><img class="photo img-responsive img-rounded" src="/img/people/"></a>
     <h4><a class="speaker-link name" href="speakers/"></a></h4>
     <div class="center-block">
