--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -99,6 +99,13 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #212121;
   padding: 20px 0;
 }
+/* homepage */
+h3 {
+  font-size: 36px;
+  font-weight: 800;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+}
 /* amerikahaus map */
 #wgmpmap {
   width:100%;
