--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -1,9 +1,10 @@
-<div class="container">
-  <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
-</div>
-<div class="container">
-  <div class="center-block countdown-timer">Countdown timer goes here</div>
-</div>
+<div class="homepage">
+  <div class="container">
+    <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
+  </div>
+  <div class="container">
+    <div class="center-block countdown-timer">Countdown timer goes here</div>
+  </div>
 
           <div class="gdlr-subscribe-item gdlr-item">
             <h4 class="gdlr-subscribe-title">Subscribe for updates</h4>
@@ -18,28 +19,29 @@
           </div>
           <div class="clear"></div>
 
-<div class="container">
-  <h3 class="">Speakers</h3>
-    <div class="speaker-item-wrapper">
-      <!-- fragments/speakers.html -->
-    </div>
-  </h3>
-</div>
-
-<div class="container">
-  <h3>Location</h3>
-  <div class="location">
-    <div class="location-title">Training Venue - Amerikahaus</div>
-    <div>
-      <i class="fa fa-location-arrow" ></i><span class="location-address">2 Friedrich-Schmidt-Platz, 1010 Wien, Austria</span>
-    </div>
-    <div id="wgmpmap"></div>
+  <div class="container">
+    <h3 class="">Speakers</h3>
+      <div class="speaker-item-wrapper">
+        <!-- fragments/speakers.html -->
+      </div>
+    </h3>
   </div>
-</div>
 
-<div class="container">
-  <h3 class="center-block">Register Now!</h3>
-  <div class="center-block">Hurry up! Early bird tickets are on sale only until July 15th</div>
-</div>
+  <div class="container">
+    <h3>Location</h3>
+    <div class="location">
+      <div class="location-title">Training Venue - Amerikahaus</div>
+      <div>
+        <i class="fa fa-location-arrow" ></i><span class="location-address">2 Friedrich-Schmidt-Platz, 1010 Wien, Austria</span>
+      </div>
+      <div id="wgmpmap"></div>
+    </div>
+  </div>
 
-<div class="ticket-item-wrapper"  ><!-- tickets fragment --></div>
+  <div class="container">
+    <h3>Register Now!</h3>
+    <div>Hurry up! Early bird tickets are on sale only until July 15th</div>
+  </div>
+
+  <div class="ticket-item-wrapper"  ><!-- tickets fragment --></div>
+</div>
