--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -1,10 +1,42 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title">Schedule</h1>
-    <span class="gdlr-page-caption">Schedule draft. Contains talks confirmed so far.</span>
-  </div>  
-</div>  
+<div class="jumbotron title-wrapper">
+  <div class="container">
+   <h1 class="page-title">Schedule</h1>
+   <span class="page-caption">Schedule draft. Contains talks confirmed so far.</span>
+  </div>
+</div>
+
+<div class="container">
+  <div class="panel panel-primary talks">
+    <div class="panel-heading">
+      <h3 class="panel-title">day</h3>
+      <span class="date">date</span>
+    </div>
+    <div class="panel-body scheduled-talk">
+      <div class="row">
+        <div class="col-sm-3">
+          <div>
+            <i class="fa fa-clock-o"></i> <span class="duration_display">when</span>
+          </div>
+          <div class="session-info session-location">
+            <i class="fa fa-location-arrow"></i> <span class="location">where</span>
+          </div>
+          <div>
+            <i class="fa fa-user" ></i> <a class="speaker-link" href="/speakers/" >Speaker Name</a>
+          </div>
+        </div>
+        <div class="col-sm-1">
+          <a class="photo-link" href="/speakers/" ><img class="img-responsive img-rounded photo"></a>
+        </div>
+        <div class="col-sm-8">
+          <h4><a class="talk-link" href="/talks/">Talk Title</a></h4>
+          <div class="short_abstract">Short extract from abstract</div>
+        </div>
+      </div>
+    </div>
+    <div class="panel-body scheduled-talk">
+    </div>
+  </div>
+</div>
 
 <div class="content-wrapper">
   <div class="gdlr-content">
@@ -26,17 +58,11 @@
                   <div class="gdlr-session-item-content-info">
                     <div class="gdlr-session-info">
                       <div class="session-info session-time">
-                        <i class="fa fa-clock-o" ></i><span class="duration_display"></span>
-                      </div>
-                      <div class="session-info session-location">
-                        <i class="fa fa-location-arrow" ></i>Location
                       </div>
                       <div class="session-info session-speaker">
                         <div class="session-speaker-inner">
-                          <i class="fa fa-user" ></i>
                           <div class="session-speaker-list">
                             <div class="session-speaker-list-item">
-                              <a class="speaker-link" href="/speakers/" >Speaker Name</a>
                             </div>
                           </div>
                         </div>
@@ -45,17 +71,11 @@
                     </div>
                   </div>
                   <div class="gdlr-session-item-content" >
-                    <h3 class="gdlr-session-item-title"><a class="talk-link" href="/talks/">Talk Title</a></h3>
-                    <div class="gdlr-session-item-excerpt">Short extract from abstract
                       <div class="clear"></div>
                       <a href="/talks/" class="gdlr-info-font excerpt-read-more">Read More</a>
                     </div>
                     <div class="gdlr-session-thumbnail-wrapper">
                       <div class="gdlr-speaker-thumbnail">
-                        <div class="gdlr-speaker-thumbnail-inner">
-                          <a href="/speakers/" ><img src="" alt="" width="150" height="150" /></a>
-                        </div>
-                        <div class="gdlr-speaker-thumbnail-title">Speaker Name</div>
                       </div>
                     </div>
                   </div>
