--- a/PerlDance/views/talks.xml
+++ b/PerlDance/views/talks.xml
@@ -1,14 +1,16 @@
 <specification>
-  <list name="gdlr-tab-session-item" iterator="talks">
-    <param name="gdlr-session-head-day" field="day"/>
-    <param name="gdlr-session-head-date" field="date" filter="date_only"/>
-    <list name="talks" iterator="talks" class="scheduled-talk">
+  <list name="talks" iterator="talks">
+    <param name="panel-title" field="day"/>
+    <param name="date" filter="date_only"/>
+    <list name="scheduled-talk" iterator="talks">
       <param name="duration_display"/>
       <param name="speaker-name" class="speaker-link" field="author.name"/>
       <param name="speaker-link" target="href" op="append" field="author.uri"/>
+      <param name="photo-link" target="href" op="append" field="author.uri"/>
+      <param name="photo" target="src" field="author.photo.uri"/>
       <param name="talk-title" class="talk-link" field="title"/>
       <param name="talk-link" target="href" op="append" field="seo_uri"/>
-      <param name="gdlr-session-item-excerpt" field="short_abstract"/>
+      <param name="short_abstract"/>
     </list>
   </list>
   <list name="unscheduled" iterator="unscheduled">
