talks page title and caption from nav (same as speakers)

--- a/PerlDance/views/talks.html
+++ b/PerlDance/views/talks.html
@@ -1,7 +1,7 @@
 <div class="jumbotron title-wrapper">
   <div class="container">
-   <h1 class="page-title">Schedule</h1>
-   <span class="page-caption">Schedule draft. Contains talks confirmed so far.</span>
+   <h1 class="page-title">Talks</h1>
+   <span class="page-caption">Schedule draft</span>
   </div>
 </div>
 
